style.css
:root {
    --color-primary: #193f6f;
    /* --color-secondary: #51a749; */
    --color-secondary: #3e8637;
    --color-light: #fafafa;
    --color-dark: #282828;

    --color-text-secondary: #777;
    --color-text-footer: #aaa;
    --color-text-secondary-on-color: #ddd;
}

html, body {
    margin:0;
    padding:0;
    font-size: 0.95em;   
}

body {
    background-color: var(--color-light);
    font-family: 'Roboto', sans-serif;
    display:grid;
    height:100%;
    min-height: 100vh;
    grid-template-rows:1fr 4em;
    color: var(--color-dark);
}

/* Title Font */
h1,h2,h3,h4,h5,h6 {
    font-family: 'Montserrat', sans-serif;
}

/* Header */
header {
    position:fixed;
    width:100%;
    top:0;
}
/*======================
        Nav Bar
========================*/
nav {
    background-color: var(--color-light);
    box-shadow: 0 0 5px 2px #9995;
    margin:0;
    box-sizing: border-box;
    position: relative;
    height: 100%;
}
nav > .logo {
    height:4.5em;
    padding:0.75em;
    box-sizing: border-box;
    align-self: center;
}

nav > .logo > a > img {
    height:100%;
}

nav > .nav-list {
    display:flex;
    flex-direction: column;
    box-sizing: border-box;
    height:100%;
    max-height:50vh;
    list-style: none;
    padding-left: 0;
    overflow: hidden;
    transition: max-height 0.3s ease;
}
.nav-list.hidden {
    max-height: 0;
}

nav > .nav-list > li {
    list-style: none;
}
.nav-link {
    display:block;
    box-sizing: border-box;
    cursor: pointer;
    padding: 1em 0.75em;
    margin: 0 0.1em;
    color: var(--color-dark);
    text-decoration: none;
}

.nav-link:hover {
    color:var(--color-secondary);
 }

.nav-link.btn-secondary {
    border:0;
    margin:0;
    border-radius: 0;
}

.navbar-toggle {
    cursor:pointer;
    position:absolute;
    right:1em;
    top:2em;
}
.hamburger-icon {
    width:2em;
    height: 1.4em;
    display:flex;
    flex-direction: column;
    justify-content: space-between;
}
.hamburger-icon > div {
    height:3px;
    background-color: var(--color-secondary);
    border-radius: 2px;
}

/*======================
        Footer
========================*/
footer {
    background-color: var(--color-dark);
    color:var(--color-text-footer);
    text-align: center;
    display:flex;
    flex-direction: column;
    justify-content: center;
    height:100%;
}
footer > p {
    margin: 0;
}
footer a { 
    color:var(--color-text-footer);
    text-decoration: none;
}

footer a:hover {
    text-decoration: underline;
}

/*======================
        Buttons
========================*/

.btn {
    padding:0.75em 1.2em;
    border-radius: 5px;
    cursor:pointer;
    text-decoration: none;
    box-sizing: border-box;
}

.btn-secondary {
    background-color:var(--color-secondary);
    color:var(--color-light) !important;
    transition:background-color 0.2s ease;
}

.btn-secondary:hover {
    background-color:#51a749;
}


/*======================
      Main Section
========================*/
.main {
    margin-top:4em;
}


.content, .booth-package-container, .sponsorship-container {
    max-width: 1100px;
    margin: 0 auto;
    padding:1em 1.75em;
}

.content > p {
    margin:1em 1.5em;
    font-size: 1rem;
}

p .bold {
    font-weight: bold;
    color:var(--color-primary)
}

.main h1 {
    font-size: 2em;
}

.main hr {
    background-color: var(--color-secondary);
    border:none;
    height:2.5px;
    max-width: 1100px;
    margin: 0 auto;
    width: 95%;
}

.main > article, .main > div {
    box-sizing: border-box;
}
article .btn {
    text-align: center;
    display:block;
    margin:1.3em auto;
    width: 10em;
}

/*======================
        Title
========================*/
.title {
    background: linear-gradient(#193f6fbb, #193f6fee),  url("images/reception.jpg");
    background-size: cover;
    background-position: center;
    height:25em;

    display:flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    color: var(--color-light);
}
.title h1 {
    margin:0.25em 0;
    font-size: 2.5em;
}
.title h2 {
    font-size: 1.9em;
    font-weight: 400;
}

/*======================
        Slideshow
========================*/

.slideshow img {
    margin:0.5em;
    background-color: #000;
    display:inline-block;
    width:100%;
    height:auto;
    overflow: hidden;
}

.slideshow-container {
    position: relative;
    overflow:hidden;
    width:80%;
    box-sizing: border-box;
    height:400px;
}



.slideshow {
    box-sizing: border-box;
    width:100%;
    height:100%;
    position: relative;
}

.slideshow::after {
    display:block;
    clear:both;
    content: "";
}

.slideshow-item {
    box-sizing: border-box;
    position: absolute;
    display:none;
    width:100%;
    height:100%;
    transition-duration: 0.5s;
}

.slideshow-item.active {
    display:block;
}
.slideshow-item.next {
    left:100%;
    display:block;
}
.slideshow-item.previous {
    transform: translateX(-100%);
}




/*======================
        Pricing
========================*/

.price-table {
    margin:0 auto;
    border-spacing: 0.75em;
}
.price-table tr td:first-child {
    text-align: right;
}
.pricing p {
    margin:0;
    
}
.pricing .future, .pricing .past {
    color:var(--color-text-secondary);
}

.pricing .past {
    text-decoration: line-through;
    
}
.pricing .current {
    font-weight: 700;
    color: var(--color-secondary);
}

/*======================
     Booth Packages
========================*/

.packages-list {
    display:flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.package {
    min-width: 275px;
    max-width: 275px;
    border-radius: 10px;
    box-shadow: 1px 1px 5px 2px #9995;
    padding:1em 1.3em;
    margin:1em;

    display:flex;
    flex-direction: column;
    justify-content: space-between;
}

.package h2 {
    margin-top:0.5em;
    text-align: center;
}
.package h3 {
    margin:0.5em 0;
}


/*======================
      Sponsorships
========================*/
.sponsorships-list {
    box-sizing: border-box;
    margin: 1em 0;
}


.sponsorship {
    border-radius: 10px;
    box-shadow: 1px 1px 5px 2px #9995;
    margin:1.5em;
    padding:1em 1.5em;
}
.sponsorship > .information {
    display:flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.sponsorship h2 {
    margin-top:0.5em;
}
.sponsorship h3 {
    margin:0.5em 0;
}

.sponsorship .pricing-title {
    text-align: center;
}

.sponsorship .price-container {
    min-width: 200px;
}

/* Colored sponsorship displays */

.sponsorship.blue {
    background-color: var(--color-primary);
    color: var(--color-text-secondary-on-color);
}

.sponsorship.green {
    background-color: var(--color-secondary);
    color: var(--color-text-secondary-on-color);
}

.blue h3, .blue h2, .green h3, .green h2 {
    color: var(--color-light);
}


.blue .pricing .future, .blue .pricing .past{
    color: var(--color-text-secondary-on-color);
}

.green .pricing .future, .green .pricing .past {
    color: var(--color-text-secondary-on-color);
}

.green .pricing .current, .blue .pricing .current {
    color: var(--color-light);
}



/*======================
    Question Section
========================*/
.question-section {
    padding:1em 0;
    display:flex;
    justify-content: center;
    margin:1em 0;
}
.question-section > div {
    display:inline-flex;
    padding:1em
}
.question-section > div > img {
    margin-right: 2em;
}
.question-section a {
    color:var(--color-secondary);
    text-decoration: none;
}

/*======================
      Join Section
========================*/
.join-section {
    background-color: var(--color-primary);
    color: var(--color-text-secondary-on-color);
    padding:1em 0;
}
.join-section h1 {
    color: var(--color-light);
}
.join-section > .content {
    display:flex;
    justify-content: space-between;
    flex-wrap: wrap;
    padding:0 5em;
    box-sizing: border-box;
    align-items: center;
}



/*======================
       Responsive
========================*/

@media all and (min-width:800px) {
    .nav-link {
        padding: 1em 1.1em;
        margin: 0 0.2em;
    }
    nav {
        padding: 0 1em;
    }
}

@media all and (min-width:750px) {
    nav {
        display:flex;
        flex-direction: row;
        justify-content: space-between;
        padding-top:0;
    }
    nav > .nav-list {
        display:flex;
        flex-direction: row;
        height:100%;
    }
    .nav-link {
        padding: 1em 0.75em;
        margin: 0 0.1em;
        text-decoration: none;
        border-bottom: 3.5px solid var(--color-light); 
        transition: border-color 0.1s ease;
    }
    .nav-link:hover {
       border-color:var(--color-secondary);
    }
    
    .nav-link.btn-secondary {
        margin:0 0.5em;
        border-radius: 5px;
    }
    .nav-list.hidden {
        max-height: initial;
    }

    .navbar-toggle {
        display:none;
    }
}

